[package]
name = "sumsub_api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
urlencoding = "2.1"
sha1 = "0.10"

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4", "serde"] }
mockito = "1.7.0"
